split multilang articles into separate files, impl aliases